# course_django_my_site

./: README.md  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug.py
blog/static/css/: blog.css
config/: settings.py
templates/: pagination.html
templates/blog/: base.html
templates/blog/post/: detail.html  list.html
