[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["[abakar.aliev] <[salachali@gmail.com]>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
django-extensions = "^4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
